--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dart-sass": "^1.25.0",
     "dotenv": "^16.3.1",
+    "jodit-react": "^1.3.39",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
