--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dart-sass": "^1.25.0",
     "dotenv": "^16.3.1",
+    "javascript-time-ago": "^2.5.9",
     "jodit-react": "^1.3.39",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
@@ -32,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-simple-wysiwyg": "^2.2.5",
     "react-slick": "^0.29.0",
+    "react-time-ago": "^7.2.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
