--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "jodit-react": "^1.3.39",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "log-update": "^6.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -29,18 +30,21 @@
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-html-parser": "^2.0.2",
+    "react-loading-skeleton": "^3.4.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-simple-wysiwyg": "^2.2.5",
     "react-slick": "^0.29.0",
     "react-time-ago": "^7.2.1",
+    "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.67.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.4",
+    "swr": "^2.2.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
