--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.4",
     "swr": "^2.2.4",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
