email and sms send logic implemented

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 MONGO_URL=mongodb://localhost:27017/blog_app
 PORT=9000
 TOKENID=kalaisurya
+
+TWILIO_ACCOUNT_ID=ACe312dfae2296ce4f8e19fa2b35fab64f
+TWILIO_TOKEN=1877a051d3a53f3fa3978e16699d3b84
+TWILIO_PHONENUMBER=+19722013986
