--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
-    "npm": "^10.2.5"
+    "npm": "^10.2.5",
+    "otp-generator": "^4.0.1",
+    "twilio": "^4.22.0"
   }
 }
