--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "javascript-time-ago": "^2.5.9",
     "jodit-react": "^1.3.39",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
     "log-update": "^6.0.0",
     "moment": "^2.29.4",
