cloudinary image upload logic implemented

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,9 @@ TOKENID=kalaisurya
 TWILIO_ACCOUNT_ID=ACe312dfae2296ce4f8e19fa2b35fab64f
 TWILIO_TOKEN=1877a051d3a53f3fa3978e16699d3b84
 TWILIO_PHONENUMBER=+19722013986
+
+
+CLOUDINARY_NAME=dx4fuhorn
+CLOUDINARY_API_KEY=453825235168616
+CLOUDINARY_API_SECRET=XtalikPddhuy84DqgYIR2XrMZi0
+
